--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ arabic-reshaper==2.1.3
 asgiref==3.3.4
 cycler==0.10.0
 Django==3.2.4
+django-crispy-forms==1.12.0
+djangorestframework==3.12.4
 future==0.18.2
 html5lib==1.1
 kiwisolver==1.3.1
