--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,11 @@ future==0.18.2
 html5lib==1.1
 kiwisolver==1.3.1
 matplotlib==3.4.2
+mysqlclient==2.0.3
 numpy==1.20.3
 pandas==1.2.4
 Pillow==8.2.0
+PyMySQL==1.0.2
 pyparsing==2.4.7
 PyPDF2==1.26.0
 python-bidi==0.4.2
